@@ -1,3 +1,7 @@
+2003-02-18  Ulrich Drepper  <drepper@redhat.com>
+
+	* pthreadP.h: Define dummy versio of DEBUGGING_P.
+
 2003-02-17  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Remnove
